@startuml
class Setting <<record>> {
}
class API <<record>> {
    + <<required>> Key : string <<get>> <<set>>
    + <<required>> Secret : string <<get>> <<set>>
}
class Bot <<record>> {
    + Capital : decimal <<get>> <<set>>
}
class Exchange <<record>> {
}
class Strategy <<record>> {
}
class "IEnumerable`1"<T> {
}
Setting --> "Api<API>" "IEnumerable`1"
Setting --> "Bots<Bot>" "IEnumerable`1"
Setting +-- API
API --> "Place" ExchangePlace
Setting +-- Bot
Bot --> "Exchange" Exchange
Bot --> "Strategies<Strategy>" "IEnumerable`1"
Setting +-- Exchange
Exchange --> "Place" ExchangePlace
Exchange --> "Symbol" Symbol
Setting +-- Strategy
Strategy --> "Kind" StrategyKind
Strategy --> "Timeframe" Timeframe
Strategy --> "Parameters<int>" "IEnumerable`1"
@enduml
